Added Minecraft Mod pack

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     </div>
     <div class="content">
         
+        <!-- C++ -->
+        <h2>C++ Projects</h2>
+
         <h3>The C++ Rest SDK ("Casablanca")</h3>
         <p><a href="http://casablanca.codeplex.com/" class="yui3-button">View on CodePlex</a>
         The C++ REST SDK is a Microsoft project for cloud-based client-server communication in native code using a modern asynchronous C++ API design. 
@@ -65,12 +68,19 @@
         <a href="https://github.com/isocpp/cppcoreguidelines">C++ Core Guidelines</a>. This repo contains Microsoft's implementation of the GSL.
         </p>
 
+        <!-- C++ -->
+        <h2>Visual Studio Projects</h2>
+
         <h3>Visual Studio MI Debug Engine</h3>
         <p><a href="https://github.com/Microsoft/MIEngine" class="yui3-button">View on GitHub</a>
         The Visual Studio MI Debug Engine ("MIEngine") provides an open-source Visual Studio Debugger extension that works with MI-enabled debuggers 
         such as gdb, lldb, and clrdbg. 
         </p>
 
+        <h3>Minecraft Mod Developer Pack</h3>
+        <p><a href="https://github.com/Microsoft/vsminecraft/" class="yui3-button">View on GitHub</a>
+        Visual Studio extension for developing MinecraftForge mods using Java. 
+        </p>
 
         <!-- Acknowledgement -->
         <p>
