Changed title to clearly indicate stuff from VC++

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="content">
         
         <!-- C++ -->
-        <h2>C++ Projects</h2>
+        <h2>C++ projects</h2>
 
         <h3>The C++ Rest SDK ("Casablanca")</h3>
         <p><a href="http://casablanca.codeplex.com/" class="yui3-button">View on CodePlex</a>
@@ -69,7 +69,7 @@
         </p>
 
         <!-- C++ -->
-        <h2>Visual Studio Projects</h2>
+        <h2>Other stuff from the VC++ team</h2>
 
         <h3>Visual Studio MI Debug Engine</h3>
         <p><a href="https://github.com/Microsoft/MIEngine" class="yui3-button">View on GitHub</a>
