Added reference to Microsoft PDB

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
         <a href="https://github.com/isocpp/cppcoreguidelines">C++ Core Guidelines</a>. This repo contains Microsoft's implementation of the GSL.
         </p>
 
+        <h3>Microsoft PDB</h3>
+        <p><a href="https://github.com/Microsoft/microsoft-pdb" class="yui3-button">View on GitHub</a>
+        Information about the Microsoft Program Database (PDB) symbol file format.
+        </p>
+
         <!-- C++ -->
         <h2>Other stuff from the VC++ team</h2>
 
